tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.diagnostic
diagnostic error code=T0001 family=type message="unknown trait bound 'MissingTrait'" @ tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari:1:19
